Fixed up hr ruling on Firefox; fixed Tornado escape variables on frontend

--- a/static/css/cw_app.scss
+++ b/static/css/cw_app.scss
@@ -18,6 +18,8 @@ hr {
   border-top: 1px solid rgba(0,0,0,.12) !important;
   border-bottom: 0;
   border-left: 0;
+  display: block;
+  display: -moz-box;
 }
 
 .visible {
